z-index on fixed columns

--- a/src/index.less
+++ b/src/index.less
@@ -49,7 +49,7 @@
     position: fixed !important;
     overflow: inherit !important;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.07);
-    z-index: 2;
+    z-index: 10;
     height: 100%;
   }
 
